--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/dextreeamper/rollon-virtual/issues"
   },
-  "homepage": "https://github.com/dextreeamper/rollon-virtual#readme"
+  "homepage": "https://github.com/dextreeamper/rollon-virtual#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.7.0",
+    "gulp-sass": "^3.1.0"
+  }
 }
